; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_stats.c_stats_stop_aggregator.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_stats.c_stats_stop_aggregator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stats = type { i32 }

@stats_enabled = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stats*)* @stats_stop_aggregator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stats_stop_aggregator(%struct.stats* %0) #0 {
  %2 = alloca %struct.stats*, align 8
  store %struct.stats* %0, %struct.stats** %2, align 8
  %3 = load i32, i32* @stats_enabled, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %11

6:                                                ; preds = %1
  %7 = load %struct.stats*, %struct.stats** %2, align 8
  %8 = getelementptr inbounds %struct.stats, %struct.stats* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @close(i32 %9)
  br label %11

11:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
